[package]
name = "file_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = { version = "2.1.0", default-features = false, features = [ "deflate" ] }
wasm-bindgen = "0.2.74"
log = "0.4"
console_log = "1.0.0"
console_error_panic_hook = "0.1"
serde_json = "1.0.117"

[lib]
crate-type = ["cdylib"]
