[package]
name = "file_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = { version = "2.1.0", default-features = false, features = [ "deflate" ] }
wasm-bindgen = "0.2.74"
log = "0.4"
console_log = "1.0.0"
console_error_panic_hook = "0.1"
serde_json = "1.0.117"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0.203", features = ["derive"] }
bls12_381 = "0.8.0"
bellman = { version = "0.14", default-features = false, features = ["groth16"] }
rand = "0.8.5"
base64 = "0.22.1"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]
